style update, TODO: fix overflow bug on mobile

--- a/main.css
+++ b/main.css
@@ -221,9 +221,12 @@ a.nav-link {
   display: inline-block;
 
   min-height: calc(100vh - 340px);
-  padding-left: 6vw;
+  margin: 5vw;
+  padding: 1vw;
 
   text-align: center;
+
+  border-radius: 0 0 50px 50px;
 }
 
 .intro-text h1 {
@@ -338,73 +341,82 @@ header #header_gradient {
   position: relative;
   z-index: 0;
 
-  margin-bottom: 20px;
-  margin-left: 22px;
-  padding: 24px 16px;
+  margin-top: 100px;
+  margin-bottom: 40px;
+  padding: 0;
 
   color: rgba(0, 0, 0, 0.87);
-  border: 1px solid #2196f3;
-  border-radius: 8px;
+  border: 2px solid #2196f3;
+  border-radius: 16px;
   background: #ffffff;
+
 }
 
 .card-head {
   overflow: hidden;
+
+  padding: 24px 34px;
 }
 
 .logo-container {
   position: absolute;
+  top: -65px;
+  left: 16px;
+
+  display: block;
+  overflow: hidden;
+
   width: 130px;
-     left: -165px;
-  top: -1px;
-  z-index: -400;
   height: 130px;
-  margin-right: 16px;
-  border-radius: 51px 0 0 522px;
-  background: url(Logos/icon-bg.png);
+
+  opacity: 1;
+  border: 2px solid #2196f3;
+  border-radius: 30px;
+  background: black;
+  /* background: url(Logos/icon-bg.png); */
   background-size: cover;
-  opacity: 0.85;
+  /* box-shadow: 0px 2px 20px 7px #00000040;*/
 }
 
 .logo-container img {
   width: 120px;
   margin: 50%;
-  padding-bottom: 4px;
 
   transform: translate(-50%, -50%);
 }
 
-.card-head h2 {
+.logo-container .logo-blur-background {
+  position: absolute;
+  top: 0;
+  left: -129px;
+
+  width: calc(136vh + 20px);
+  height: 100vh;
+
+  opacity: 0.9;
+  background-image: url('./OregonBlur.jpg');
+  background-attachment: fixed;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.card h1 {
   margin-top: 0;
-    position: absolute;
-    transform: rotate(90deg) translate(-24px, 34px);
-    transform-origin: left;
+  margin-right: 16px;
+  margin-bottom: -36px;
+  margin-left: 164px;
+    padding: 24px;
+
+    transform: translateY(-50%);
+    text-align: left;
+
+    border: 2px solid #2196f3;
+    border-radius: 100px;
+    background: white;
+
+    font-size: 40px;
+    line-height: 42px;
 }
-
-@media (max-width: 1200px) {
-  .logo-container {
-    float: left;
-    left: 0;
-    right: 0;
-    opacity: 1;
-    position: relative;
-    width: 130px;
-    height: 130px;
-    margin-right: 16px;
-
-    border-radius: 30px;
-    background: url(Logos/icon-bg.png);
-    background-size: cover;
-  }
-  .card-head h2 {
-    position: relative;
-    transform: none;}
-    .card{
-      margin-left:0;
-    }
-}
-
-
 
 .slide-deck {
   margin: 0 20px;
@@ -418,12 +430,13 @@ header #header_gradient {
   height: 300px;
   margin: 10px 20px 0 20px;
 
-  transition: transform 200ms ease, opacity 200ms ease-out;
+  transition: transform 200ms ease;
 
   opacity: 0;
   border-radius: 2px;
   /* outline: none; */
   background: teal;
+  box-shadow: 0 4px 16px -5px rgb(0 0 0 / 48%);
 }
 
 .slide-image img {
@@ -465,6 +478,8 @@ header #header_gradient {
   }
   .intro-text {
     display: block;
+
+    margin : 0vw;
   }
   .intro-text h1 {
     font-size: 2.2em;
@@ -476,8 +491,9 @@ header #header_gradient {
     margin: 0 0 12px 0 !important;
   }
   select#project_pages_select {
-    font-size: 14px;
     padding: 12px;
+
+    font-size: 14px;
   }
 }
 
@@ -486,18 +502,20 @@ header #header_gradient {
     display: none;
   }
   #Header {
-    text-align: left;
     padding-left: 16px;
+
+    text-align: left;
   }
   select#project_pages_select {
-    font-size: 12px;
     padding: 6px;
+
+    font-size: 12px;
   }
 }
 
 @media (max-height: 540px) {
   .intro-text {
-    padding-left: 1vw;
+    margin : 0vw;
   }
   .intro-text h1 {
     padding-top: 46px;
@@ -567,7 +585,7 @@ header #header_gradient {
   padding: 12px;
 
   color: rgba(0, 0, 0, 0.87);
-  border: 1px solid #2196f3;
+  border: 2px solid #2196f3;
   border-radius: 8px;
   background: #ffffff;
 }
@@ -618,23 +636,28 @@ footer .slick-credit {
   float: right;
 }
 #project_pages_select_section {
-  text-align: center;
-
   position: relative;
-  margin: 12px auto;
+
   width: fit-content;
+  margin: 12px auto;
   padding: 12px;
+
+  text-align: center;
 }
 #project_pages_select {
+  width: fit-content;
+  padding: 12px 18px;
+
+  cursor: pointer;
+
   color: white;
   border: none;
-  width: fit-content;
-  font-weight: bold;
-  background: #000000d1;
-  font-size: 19px;
   border-radius: 120px;
-  padding: 12px 18px;
-  cursor: pointer;
+  background: #000000d1;
+
+  font-size: 19px;
+  font-weight: bold;
+
   -webkit-appearance: unset;
   -moz-appearance: unset;
   appearance: unset;
